--- a/style.css
+++ b/style.css
@@ -9,27 +9,33 @@
     text-decoration: none;
     list-style: none;
     scroll-behavior: smooth;
-    font-family: 'DM Sans', sans-serif;
     font-family: 'Roboto', sans-serif;
-    background-color: white;
+    
 }
+
+.header {
+    background-color: antiquewhite;
+
+}
+
 
 .nav {
     display: flex;
     justify-content: space-between;
     align-items: center; 
+    margin: 0 200px;
 
 }
 
 .nav-title {
-    
+    color: #181818;
     font-size: 45px;
     font-weight: 800;
     line-height: 61px;
     letter-spacing: 0%;
     
 }
-.nav span {
+.nav-title span {
     color: #FD6E0A;
 }
 
@@ -52,11 +58,14 @@
     border-radius: 5px;
     background: #FD6E0A;
     border: 0;
-    width: 150px;
-    height: 64px;
+    width: 155px;
+    height: 60px;
     color: #FFFFFF;
     font-size: 20px;
     font-weight: 700;
     line-height: 27px;
     letter-spacing: 0%;
+}
+.banner {
+    padding: 30px 30px 30px 150px;
 }
